LRDOCS-14351 Clarifications and corrections